--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "traffic-monitor",
-  "version": "0.1.0",
+  "name": "marg-vedha",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
@@ -20,7 +20,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
